2019-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/locale.c (GetLocaleMessageFromTag): Eliminate clang
	warning about comparison with a constant value.

	* magick/log.c (InitializeLogInfo): Initialize LogInfo log_configured.

2019-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magic.c (struct): Ajust StaticMagic definition to be more
	const-friendly.

	* magick/color_lookup.c (struct): Adjust StaticColors definition
	to be more const-friendly.

	* magick/attribute.c: Ajust tag_table definition to be more
	const-friendly.

	* magick/log.c: Allocate LogInfo from heap as we used to do.

	* magick/locale.c (GetLocaleMessageFromTag): Adaptations to locale
	coder output changes.

	* coders/locale.c (WriteLOCALEImage): Adjust locale coder output
	to be more const.

2019-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color_lookup.c: Make built-in color tables fully const.

	* magick/animate.c: Use MagickXTextViewWidgetNDL() to display help
	text.

	* magick/display.c: Use MagickXTextViewWidgetNDL() to display help
	text.

	* magick/widget.c (MagickXTextViewWidgetNDL): New private function
	to display multi-line null-delimited text in an X11 widget.

	* coders/xwd.c (ReadXWDImage): Added even more XWD header
	validation logic.  Addresses problems noted by email from Hongxu
	Chen to the graphicsmagick-security mail alias on Fri, 19 Apr 2019
	and Sat, 20 Apr 2019 and entitled "Multiple crashes (FPE and
	invalid read) when processing XWD files".

2019-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Added even more XWD header
	validation logic.  Addresses problems noted by email from Hongxu
	Chen to the graphicsmagick-security mail alias on Wed, 17 Apr 2019
	and entitled "Multiple crashes (FPE and invalid read) when
	processing XWD files".  Also addresses additional issues noted
	that an attacker could request to allocate an arbitrary amount of