@@ -38,6 +38,8 @@
 <p>2019-04-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/command.c (VersionCommand): Show OpenMP specification
+version corresponding to version enumeration.</li>
 <li>magick/locale.c (GetLocaleMessageFromTag): Eliminate clang
 warning about comparison with a constant value.</li>
 <li>magick/log.c (InitializeLogInfo): Initialize LogInfo log_configured.</li>
